# VENUSpy

./: README.md  build.sh  cli.py  meta.yml  pyproject.toml  setup.py
.github/workflows/: publish.yml
examples/: B.C2H2.input.mopac  B.C2H2.input.psi4  B.C2H2.input.xtb  B.C2H2.input.xyz  CH.C4H6.input.xyz  CH.SH2.input.xyz  H2O.input.xtb  H2O.input.xyz  HBr.HCl.input.xyz  O.O2.input.chempotpy  O.O2.input.xyz  OH.input.xyz
examples/MLmodels/CHC4H6/: best_inference_model
examples/MLmodels/CHSH2/: model.physnet.config
examples/MLmodels/CHSH2/logs/: checkpoint  model.ckpt-6600000.index  model.ckpt-6610000.index  model.ckpt-6620000.index  model.ckpt-6630000.index  model.ckpt-6640000.index  model.ckpt-6650000.index  model.ckpt-6660000.index  model.ckpt-6670000.index  model.ckpt-6680000.index  model.ckpt-6690000.index  model.ckpt-6700000.index  model.ckpt-6710000.index
examples/MLmodels/HBrHCl/: model-train8000-sym2-sig0050.npz
venuspy/: initialSampling.py  md.py
venuspy/calc/: physnetcalc.py
