[build-system]
requires = ["setuptools>=61.0.0", "wheel", "ase"]
build-backend = "setuptools.build_meta"

[project]
name = "venuspy"
description = "VENUSpy Initial Sampling and Molecular Dynamics"
keywords = ["moleculardynamics", "initialsampling"]
classifiers = ["Development Status :: 5 - Production/Stable",
 "Environment :: Console",
 "Intended Audience :: Science/Research",
 "Operating System :: OS Independent",
 "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "venuspy.__version__"}
